test/errors/shadow_self1.sl
# expect: COMPERROR
# self should not be allowed to be shadowed

auto self = 1;

